--- a/ Homeless_By_Age.ipynb
+++ b/ Homeless_By_Age.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -53,8 +53,8 @@
        "      <th>Overall Homeless - Multiple Races</th>\n",
        "      <th>County_name</th>\n",
        "      <th>Civilian_labor_force</th>\n",
-       "      <th>Employed</th>\n",
        "      <th>Unemployed</th>\n",
+       "      <th>Employed</th>\n",
        "      <th>Unemployment_rate</th>\n",
        "      <th>Median_Household_Income</th>\n",
        "      <th>Med_HH_Income_Percent_of_State_Total</th>\n",
@@ -236,12 +236,12 @@
        "3                                 18  Anne Arundel County   \n",
        "4                                 16        Howard County   \n",
        "\n",
-       "   Civilian_labor_force  Employed  Unemployed  Unemployment_rate  \\\n",
-       "0                 32253     30618        1635                  5   \n",
-       "1                287760    273351       14409                  5   \n",
-       "2                143572    138927        4645                  3   \n",
-       "3                321069    311556        9513                  3   \n",
-       "4                191529    186427        5102                  3   \n",
+       "   Civilian_labor_force  Unemployed  Employed  Unemployment_rate  \\\n",
+       "0                 32253       30618      1635                  5   \n",
+       "1                287760      273351     14409                  5   \n",
+       "2                143572      138927      4645                  3   \n",
+       "3                321069      311556      9513                  3   \n",
+       "4                191529      186427      5102                  3   \n",
        "\n",
        "   Median_Household_Income Med_HH_Income_Percent_of_State_Total  \n",
        "0                    48170                                   56  \n",
@@ -253,7 +253,7 @@
        "[5 rows x 26 columns]"
       ]
      },
-     "execution_count": 105,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +267,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -285,12 +285,12 @@
        "       'Overall Homeless - American Indian or Alaska Native',\n",
        "       'Overall Homeless - Native Hawaiian or Other Pacific Islander',\n",
        "       'Overall Homeless - Multiple Races', 'County_name',\n",
-       "       'Civilian_labor_force', 'Employed', 'Unemployed', 'Unemployment_rate',\n",
+       "       'Civilian_labor_force', 'Unemployed', 'Employed', 'Unemployment_rate',\n",
        "       'Median_Household_Income', 'Med_HH_Income_Percent_of_State_Total'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -301,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 107,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 108,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -396,7 +396,7 @@
        "4                               14                         119  "
       ]
      },
-     "execution_count": 108,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 109,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 110,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -428,7 +428,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 110,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,7 +439,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -449,7 +449,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
        "Montgomery County                                              489  "
       ]
      },
-     "execution_count": 112,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -655,7 +655,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,7 +664,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -681,51 +681,52 @@
     }
    ],
    "source": [
-    "# Plot the unemployment values for a single country\n",
-    "county1, = plt.plot(ages, age_df.loc['Allegany County',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"blue\",label=age_df.loc['Allegany County'])\n",
+    "# Plot the unemployment values for a single \n",
+    "councounty1, = plt.plot(ages, age_df.loc['Allegany County',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
+    "                        color=\"blue\",label='Allegany')\n",
     "\n",
     "county3, = plt.plot(ages, age_df.loc['Harford County',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"red\",label=age_df.loc['Harford County'])\n",
+    "                        color=\"red\",label='Harford')\n",
     "\n",
     "county4, = plt.plot(ages, age_df.loc['Anne Arundel County',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"brown\",label=age_df.loc['Anne Arundel County'])\n",
+    "                        color=\"brown\",label='Anne Arundel')\n",
     "\n",
     "county5, = plt.plot(ages, age_df.loc['Howard County',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"cyan\",label=age_df.loc['Howard County'])\n",
+    "                        color=\"cyan\",label='Howard')\n",
     "\n",
     "county6, = plt.plot(ages, age_df.loc['Baltimore County',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"magenta\",label=age_df.loc['Baltimore County'])\n",
+    "                        color=\"magenta\",label='Baltimore')\n",
     "\n",
     "county7, = plt.plot(ages, age_df.loc['Carroll County',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"yellow\",label=age_df.loc['Carroll County'])\n",
+    "                        color=\"yellow\",label='Carroll')\n",
     "\n",
     "county8, = plt.plot(ages, age_df.loc['Cecil County',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"black\",label=age_df.loc['Cecil County'])\n",
+    "                        color=\"black\",label='Cecil')\n",
     "\n",
     "county9, = plt.plot(ages, age_df.loc['Charles, Calvert, St.Mary Counties',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"pink\",label=age_df.loc['Charles, Calvert, St.Mary Counties'])\n",
+    "                        color=\"pink\",label='Charles, Calvert, St.Mary')\n",
     "\n",
     "county10, = plt.plot(ages, age_df.loc['Frederick County',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"purple\",label=age_df.loc['Frederick County'])\n",
+    "                        color=\"purple\",label='Frederick')\n",
     "\n",
     "county11, = plt.plot(ages, age_df.loc['Garrett County',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"navy\",label=age_df.loc['Garrett County'])\n",
+    "                        color=\"navy\",label='Garrett')\n",
     "\n",
     "county12, = plt.plot(ages, age_df.loc['Mid-Shore Regional Counties',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"lime\",label=age_df.loc['Mid-Shore Regional Counties'])\n",
+    "                        color=\"lime\",label='Mid-Shore Regional')\n",
     "\n",
     "county13, = plt.plot(ages, age_df.loc['Washington County',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"ivory\",label=age_df.loc['Washington County'])\n",
+    "                        color=\"ivory\",label='Washington')\n",
     "\n",
     "county14, = plt.plot(ages, age_df.loc['Wicomico, Somerset, Worcester Counties',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"orange\",label=age_df.loc['Wicomico, Somerset, Worcester Counties'])\n",
+    "                        color=\"orange\",label='Wicomico, Somerset, Worcester')\n",
     "\n",
     "county15, = plt.plot(ages, age_df.loc['Prince Georges County',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"orchid\",label=age_df.loc['Prince Georges County'])\n",
+    "                        color=\"orchid\",label='Prince Georges')\n",
     "\n",
     "county16, = plt.plot(ages, age_df.loc['Montgomery County',[\"Overall Homeless - Under 18\",\"Overall Homeless - Age 18 to 24\",\"Overall Homeless - Over 24\"]], \n",
-    "                        color=\"maroon\",label=age_df.loc['Montgomery County'])\n",
+    "                        color=\"maroon\",label='Montgomery')\n",
+    "\n",
     "\n",
     "plt.savefig('images/Homeless_By_Age')\n",
     "plt.show()\n"
